# edastra

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
edastra/: __init__.py  empirical.py  evolution.py  photometry.py  plotting.py  proxies.py  utils.py
edastra/data/: barnes_kim_2010.csv
src/edastra/: __init__.py  empirical.py  photometry.py  plotting.py  proxies.py  utils.py
